--- a/mylove/project.config.json
+++ b/mylove/project.config.json
@@ -7,10 +7,14 @@
 		"minified": true,
 		"newFeature": true
 	},
+  "client": "./client",
+  "svr": "./server",
+  "miniprogramRoot": "./client",
+  "qcloudRoot": "./server",
 	"compileType": "miniprogram",
 	"libVersion": "1.6.4",
 	"appid": "wx1c9835e404cc3d69",
-	"projectname": "love-08",
+	"projectname": "mylove",
 	"condition": {
 		"search": {
 			"current": -1,
