添加微信程序

--- a/mylove/client/project.config.json
+++ b/mylove/client/project.config.json
@@ -7,14 +7,10 @@
 		"minified": true,
 		"newFeature": true
 	},
-	"client": "./client",
-	"svr": "./server",
-	"miniprogramRoot": "./client",
-	"qcloudRoot": "./server",
 	"compileType": "miniprogram",
 	"libVersion": "1.6.4",
 	"appid": "wx1c9835e404cc3d69",
-	"projectname": "mylove",
+	"projectname": "love-08",
 	"condition": {
 		"search": {
 			"current": -1,
