--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8080
+  port: 9000
 spring:
   datasource:
     name: test
-    url: jdbc:mysql://:3306/invitations?characterEncoding=utf8
+    url: jdbc:mysql://47.98.211.153:3306/invitations?characterEncoding=utf8
     username: root
     password: Yuzj2018$
     type: com.alibaba.druid.pool.DruidDataSource
